--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
         "geist": "^1.3.0",
         "input-otp": "^1.4.2",
         "lucide-react": "^0.511.0",
+        "motion": "^12.15.0",
         "next": "^15.0.1",
         "next-themes": "^0.4.6",
         "postcss": "^8.4.39",
