--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,8 @@
         "@mui/icons-material": "^7.1.1",
         "@mui/material": "^7.1.1",
         "@next/font": "^14.2.15",
+        "@radix-ui/react-checkbox": "^1.0.4",
+        "@radix-ui/react-radio-group": "^1.1.3",
         "@radix-ui/react-tabs": "^1.1.12",
         "@tailwindcss/postcss": "^4.1.7",
         "@types/eslint": "^8.56.10",
@@ -26,6 +28,7 @@
         "@typescript-eslint/parser": "^8.1.0",
         "axios": "^1.9.0",
         "class-variance-authority": "^0.7.1",
+        "cloudinary": "^2.7.0",
         "clsx": "^2.1.1",
         "cmdk": "^1.1.1",
         "creatr-devtools": "latest",
@@ -40,6 +43,7 @@
         "framer-motion": "^12.15.0",
         "geist": "^1.3.0",
         "google-auth-library": "^9.15.1",
+        "html2pdf.js": "^0.10.3",
         "input-otp": "^1.4.2",
         "lucide-react": "^0.511.0",
         "motion": "^12.15.0",
@@ -47,6 +51,7 @@
         "next-themes": "^0.4.6",
         "postcss": "^8.4.39",
         "postcss-syntax": "^0.36.2",
+        "radio-group": "^0.0.2",
         "radix-ui": "^1.4.2",
         "react": "^18.3.1",
         "react-day-picker": "^9.7.0",
@@ -66,6 +71,7 @@
         "tailwindcss": "^4.1.7",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.5.3",
+        "uuid": "^9.0.1",
         "vaul": "^1.1.2",
         "zustand": "^5.0.5"
     },
